2001-07-06  Gabriel Dos Reis  <gdr@merlin.codesourcery.com>

	* libmath/Makefile.am (EXTRA_DIST): Remove atan2f.c and expf.c
	* libmath/Makefile.in: Regenerate.
	* libmath/expf.c: Remove.
	* libmath/atan2f.c: Likewise.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Protect variable from shell
	expansion (thanks to Alexandre Oliva).
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	libstdc++/3284
	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Portability enhancement.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-07-02  Loren J. Rittle  <ljrittle@acm.org>

	libstdc++/3243
	* acinclude.m4 (GLIBCPP_ENABLE_THREADS): Add relative path to
	staged/installed area to support -I-.  Document.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.

2001-06-27  Phil Edwards  <pme@sources.redhat.com>

	* include/backward/algo.h:  Add "GPL plus runtime exception" comment
	block, this time for real.
	* include/backward/algobase.h:  Likewise.
	* include/backward/alloc.h:  Likewise.
	* include/backward/bvector.h:  Likewise.
	* include/backward/defalloc.h:  Likewise.
	* include/backward/deque.h:  Likewise.
	* include/backward/function.h:  Likewise.
	* include/backward/hash_map.h:  Likewise.
	* include/backward/hash_set.h:  Likewise.
	* include/backward/hashtable.h:  Likewise.
	* include/backward/heap.h:  Likewise.
	* include/backward/iterator.h:  Likewise.
	* include/backward/list.h:  Likewise.
	* include/backward/map.h:  Likewise.
	* include/backward/multimap.h:  Likewise.
	* include/backward/multiset.h:  Likewise.
	* include/backward/pair.h:  Likewise.
	* include/backward/rope.h:  Likewise.
	* include/backward/set.h:  Likewise.
	* include/backward/slist.h:  Likewise.
	* include/backward/stack.h:  Likewise.
	* include/backward/strstream:  Likewise.
	* include/backward/tempbuf.h:  Likewise.
	* include/backward/tree.h:  Likewise.
	* include/backward/vector.h:  Likewise.