@@ -655,16 +655,16 @@ namespace std
         valarray<value_type> operator[] (const valarray<bool>&) const;
         valarray<value_type> operator[] (const valarray<size_t>&) const;
     
-        _Expr<_UnClos<_Unary_plus,_Expr,_Clos>, value_type>
+        _Expr<_UnClos<_Unary_plus,std::_Expr,_Clos>, value_type>
         operator+ () const;
 
-        _Expr<_UnClos<negate,_Expr,_Clos>, value_type>
+        _Expr<_UnClos<negate,std::_Expr,_Clos>, value_type>
         operator- () const;
 
-        _Expr<_UnClos<_Bitwise_not,_Expr,_Clos>, value_type>
+        _Expr<_UnClos<_Bitwise_not,std::_Expr,_Clos>, value_type>
         operator~ () const;
 
-        _Expr<_UnClos<logical_not,_Expr,_Clos>, bool>
+        _Expr<_UnClos<logical_not,std::_Expr,_Clos>, bool>
         operator! () const;
 
         size_t size () const;
@@ -769,16 +769,16 @@ namespace std
     inline _Expr<_UnClos<logical_not,_Expr,_Dom>, bool>
     _Expr<_Dom,_Tp>::operator! () const
     {
-        typedef _UnClos<logical_not,_Expr,_Dom> _Closure;
+        typedef _UnClos<logical_not,std::_Expr,_Dom> _Closure;
         return _Expr<_Closure,_Tp> (_Closure(this->_M_closure));
     }
 
 #define _DEFINE_EXPR_UNARY_OPERATOR(_Op, _Name)                         \
 template<class _Dom, typename _Tp>                                      \
-inline _Expr<_UnClos<_Name,_Expr,_Dom>,_Tp>                             \
+inline _Expr<_UnClos<_Name,std::_Expr,_Dom>,_Tp>                        \
 _Expr<_Dom,_Tp>::operator _Op () const                                 \
 {                                                                       \
-    typedef _UnClos<_Name,_Expr,_Dom> _Closure;                         \
+    typedef _UnClos<_Name,std::_Expr,_Dom> _Closure;                    \
     return _Expr<_Closure,_Tp> (_Closure (this->_M_closure));           \
 }
 
